ISTIO-TRAINING/traffic-management/envoy-filter.yml
Envoy Filter

The EnvoyFilter resource allows to customize the Envoy configuration that gets generated by the Istio Pilot.
Using the resource you can update values, add specific filters, or even add new listeners, clusters, etc
Use this feature with care, as incorrect customization might destabilize the entire mesh.

The filters are additively applied.
meaning there can be any number of filters for a given workload in a specific namespace
The filters in the root namespace
are applied first, followed by all matching filters in the workloads’ namespace.

Here’s an example of an EnvoyFilter that adds a header called api-version to the request.


apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: api-header-filter
  namespace: default
spec:
  workloadSelector:
    labels:
      app: web-frontend
  configPatches:
  - applyTo: HTTP_FILTER
    match:
      context: SIDECAR_INBOUND
      listener:
        portNumber: 8080
        filterChain:
          filter:
            name: "envoy.http_connection_manager"
            subFilter:
              name: "envoy.router"
    patch:
      operation: INSERT_BEFORE
      value:
        name: envoy.lua
        typed_config:
          "@type": "type.googleapis.com/envoy.config.filter.http.lua.v2.Lua"
          inlineCode: |
            function envoy_on_response(response_handle)
              response_handle:headers():add("api-version", "v1")
            end

If you send a request to the $GATEWAY_URL you can notice the api-version header is added, as shown below:

curl -s -I -X HEAD  http://$GATEWAY_URL

HTTP/1.1 200 OK
x-powered-by: Express
content-type: text/html; charset=utf-8
content-length: 2471
etag: W/"9a7-hEXE7lJW5CDgD+e2FypGgChcgho"
date: Tue, 17 Nov 2020 00:40:16 GMT
x-envoy-upstream-service-time: 32
api-version: v1
server: istio-envoy
